# secondScreenUtil

./: CMakeLists.txt  config.cpp  config.hpp  keyboard.cpp  keyboard.h  keyboard.ui  keyboardWidget.cpp  keyboardWidget.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  requirements.txt  systemInfo.cpp  systemInfo.hpp  util.cpp  util.hpp
